--- a/math.html
+++ b/math.html
@@ -10,7 +10,7 @@
                 </div>
                 <!-- UI Section -->
                     <ul class="nav">
-                        <li><a href="main.html">Homepage</a></li>
+                        <li><a href="index.html">Homepage</a></li>
                         <li><a href="chemsitry.html">Chemistry Notes</a></li>
                         <li><a href="physics.html">Physics Notes</a></li>
                     </ul>
