--- a/chemsitry.html
+++ b/chemsitry.html
@@ -8,7 +8,7 @@
                 </div>
             <body>
                 <ul class="nav">
-                    <li><a href="main.html">Homepage</a></li>
+                    <li><a href="index.html">Homepage</a></li>
                     <li><a href="physics.html">Physics Notes</a></li>
                     <li><a href="math.html">Math Notes</a></li>
                 </ul>
