--- a/physics.html
+++ b/physics.html
@@ -8,7 +8,7 @@
             <body>
                 <!-- List contianing all the links for the other pages on the website -->
                 <ul class="nav">
-                    <li><a href="main.html">Homepage</a></li>
+                    <li><a href="index.html">Homepage</a></li>
                     <li><a href="chemsitry.html">Chemistry Notes</a></li>
                     <li><a href="math.html">Math Notes</a></li>
                 </ul>
