--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!-- Main header at the top of the webpage -->
             <header>Rocco's Notes Webpage</header> 
         </font>
-            <link rel="stylesheet" href="main.css">
+            <link rel="stylesheet" href="index.css">
     </main>
     <h1> Introduction and main page </h1>        
     
