--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </ol>
         </div>
         <center>
-            <mark>THERE HAS BEEN AN OVERHAUL TO THE WEBISTE, RATHER THAN TYPING IN THE NOTES, THE FIRST PAGE OF THE NOTES WILL BE WRITTEN IN SO THAT THE PEOPLE CAN GET A GOOD IDEA OF WHAT THE TOPIC IS ABOUT, AND THEN A PDF WILL BE THERE TO BE DOWNLOADED. </mark>
+            <mark>Currently, the messages and the upload function don't work, but they will be fixed ASAP!</mark>
         </center>
         <br>
         <!-- Notes Upload Section Code -->
