--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <main>
         <font> 
             <!-- Main header at the top of the webpage -->
-            <header>Rocco's Notes Webpage</header> 
+            <header>IB Notes Webpage</header> 
         </font>
             <link rel="stylesheet" href="index.css">
     </main>
-    <h1> Introduction and main page </h1>        
+    <h1> Homepage </h1>        
     
     <p class="p"> This is the main page where you will be able to go to different subjects with all of the notes that I have written over the few months / years.</p>
     
