--- a/index.html
+++ b/index.html
@@ -70,21 +70,21 @@
                     </ol>
             </ol>
         </div>
-        <!--
+    <!--
         <center>
             <mark>Currently, the messages and the upload function don't work, but they will be fixed ASAP!</mark>
         </center>
-        <br>
+        <br> -->
         <!-- Notes Upload Section Code -->
-        <h2>Upload Your Notes Here:</h2>
+    <!--    <h2>Upload Your Notes Here:</h2>
             <body1>
                 <form action="upload.php" method="post" enctype="multipart/form-data">
                     <input type="file" name="file">
                     <input type="submit" value="submit">
                 </form>
-            </body1>
+            </body1> -->
         <!-- Comments Section Code -->
-            <body2>
+        <!--    <body2>
                 <form action="comment.php" method="post">
                     <label> Name: 
                         <br>
@@ -99,8 +99,7 @@
                     <br>
                     <input type="submit" name="post" value="Post">
                 </form>
-            </body2>
-        -->
+            </body2> -->
     <!-- Dark Mode Button Code -->
     <ul1>
         <li id="DarkModeElements">
