--- a/chemsitry.html
+++ b/chemsitry.html
@@ -26,7 +26,7 @@
                     <h2 id="TopicOneTitle">Topic 1 Notes - Stoichimetric Relationships</h2>
                         <ol>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-1.pdf"> Download Topic 1 (PDF)</a></li>
-                            <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-1.note"> Download Topic 1 (Notabiliy)</a></li>
+                            <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-1.note" download> Download Topic 1 (Notabiliy)</a></li>
                         </ol>
                     <h class="Headings">Topic 2: Atomic Structure</h>
                         <ol>
