Amend Previous Commit

--- a/chemsitry.html
+++ b/chemsitry.html
@@ -31,6 +31,7 @@
                     <h class="Headings">Topic 2: Atomic Structure</h>
                         <ol>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-2.pdf"> Download Topic 2</a></li>
+                            <li><a class="Download Links" href="Notes (Chemsitry)/Chemistry-Topic-2.note" download> Download Topic 2 (Notability)</a></li>
                         </ol>
                     <h class="Headings">Topic 3: Periodicity</h>
                         <ol>
