Updating chemistry page

--- a/chemsitry.html
+++ b/chemsitry.html
@@ -30,12 +30,13 @@
                         </ol>
                     <h class="Headings">Topic 2: Atomic Structure</h>
                         <ol>
-                            <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-2.pdf"> Download Topic 2</a></li>
+                            <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-2.pdf"> Download Topic 2 (PDF)</a></li>
                             <li><a class="Download Links" href="Notes (Chemsitry)/Chemistry-Topic-2.note" download> Download Topic 2 (Notability)</a></li>
                         </ol>
                     <h class="Headings">Topic 3: Periodicity</h>
                         <ol>
-                            <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-2.pdf"> Download Topic 3</a></li>
+                            <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-2.pdf"> Download Topic 3 (PDF)</a></li>
+                            <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-3.note"> Download Topic 3 (Notability)</a></li>
                         </ol>
                     <h class="Headings">Topic 4: Chemical bonding and strcutre</h>
                         <ol>
