--- a/chemsitry.html
+++ b/chemsitry.html
@@ -22,6 +22,9 @@
                 Furthermore, Topic 11 wasn't included because honestly... Why?
                 </body1>
                 <h2>Notes Download Links</h2>
+                    <section2>
+                        <img id="ChemistryMeme" src="Memes/Chemistry meme.webp">
+                    </section2>
                     
                     <h2 id="TopicOneTitle">Topic 1 Notes - Stoichimetric Relationships</h2>
                         <ol>
