Chemistry Topic Names

--- a/chemsitry.html
+++ b/chemsitry.html
@@ -31,92 +31,92 @@
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-1.pdf"> Download Topic 1 (PDF)</a></li>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-1.note" download> Download Topic 1 (Notabiliy)</a></li>
                         </ol>
-                    <h class="Headings">Topic 2: Atomic Structure</h>
+                    <h class="Headings">Topic 2 Notes - Atomic Structure</h>
                         <ol>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-2.pdf"> Download Topic 2 (PDF)</a></li>
                             <li><a class="Download Links" href="Notes (Chemsitry)/Chemistry-Topic-2.note" download> Download Topic 2 (Notability)</a></li>
                         </ol>
-                    <h class="Headings">Topic 3: Periodicity</h>
+                    <h class="Headings">Topic 3 Notes - Periodicity</h>
                         <ol>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-3.pdf"> Download Topic 3 (PDF)</a></li>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-3.note"> Download Topic 3 (Notability)</a></li>
                         </ol>
-                    <h class="Headings">Topic 4: Chemical bonding and strcutre</h>
+                    <h class="Headings">Topic 4 Notes - Chemical bonding and strcutre</h>
                         <ol>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-4.pdf"> Download Topic 4 (PDF)</a></li>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-4.note" download> Download Topic 4 (Notability)</a></li>
                         </ol>
-                    <h class="Headings">Topic 5: Energetics/thermochemistry</h>
+                    <h class="Headings">Topic 5 Notes - Energetics/thermochemistry</h>
                         <ol>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-5.pdf"> Download Topic 5 (PDF)</a></li>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-5.note" download> Download Topic 5 (Notability)</a></li>
                         </ol>
-                    <h class="Headings">Topic 6: Chemical kinetics</h>
+                    <h class="Headings">Topic 6 Notes - Chemical kinetics</h>
                         <ol>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-6.pdf"> Download Topic 6 (PDF)</a></li>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-6.note" download> Download Topic 6 (Notability)</a></li>
                         </ol>
-                    <h class="Headings">Topic 7: Equilibrium</h>
+                    <h class="Headings">Topic 7 Notes - Equilibrium</h>
                         <ol>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-7.pdf"> Download Topic 7 (PDF)</a></li>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-7.note" download> Download Topic 7 (Notability)</a></li>
                         </ol>
-                    <h class="Headings">Topic 8: Acids and Bases</h>
+                    <h class="Headings">Topic 8 Notes - Acids and Bases</h>
                         <ol>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-8.pdf"> Download Topic 8 (PDF)</a></li>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-8.note" download> Download Topic 8 (Notability)</a></li>
                         </ol>
-                    <h class="Headings">Topic 9: Redox Processes</h>
+                    <h class="Headings">Topic 9 Notes - Redox Processes</h>
                         <ol>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-9.pdf"> Download Topic 9 (PDF)</a></li>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-9.note" download> Download Topic 9 (Notability)</a></li>
                         </ol>
-                    <h class="Headings">Topic 10: Organic Chemistry</h>
+                    <h class="Headings">Topic 10 Notes - Organic Chemistry</h>
                         <ol>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-10.pdf"> Download Topic 10 (PDF)</a></li>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-10.note" download> Download Topic 10 (Notability)</a></li>
                         </ol>
-                    <h class="Headings">Topic 12: Atomic Structure (HL)</h>
+                    <h class="Headings">Topic 12 Notes - Atomic Structure (HL)</h>
                         <ol>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-12.pdf"> Download Topic 12 (PDF)</a></li>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-12.note" download> Download Topic 12 (Notability)</a></li>
                         </ol>
-                    <h class="Headings">Topic 13: The Periodic Table - The Transition Metals (HL)</h>
+                    <h class="Headings">Topic 13 Notes - The Periodic Table - The Transition Metals (HL)</h>
                         <ol>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-13.pdf"> Download Topic 13 (PDF)</a></li>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-13.note" download> Download Topic 13 (Notability)</a></li>
                         </ol>
-                <h class="Headings">Topic 14: Chemical Bonding and Structure (HL)</h>
+                <h class="Headings">Topic 14 Notes - Chemical Bonding and Structure (HL)</h>
                         <ol>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-14.pdf"> Download Topic 14 (PDF)</a></li>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-14.note" download> Download Topic 14 (Notability)</a></li>
                         </ol>
-                <h class="Headings">Topic 15: Energetics / Thermochemistry (HL)</h>
+                <h class="Headings">Topic 15 Notes - Energetics / Thermochemistry (HL)</h>
                         <ol>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-15.pdf"> Download Topic 15 (PDF)</a></li>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-15.note" download> Download Topic 15 (Notability)</a></li>
                         </ol>
-                <h class="Headings">Topic 16: Chemcial Kinetics (HL)</h>
+                <h class="Headings">Topic 16 Notes - Chemcial Kinetics (HL)</h>
                         <ol>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-16.pdf"> Download Topic 16 (PDF)</a></li>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-16.note" download> Download Topic 16 (Notability)</a></li>
                         </ol>
-                <h class="Headings">Topic 17: Equilibrium (HL)</h>
+                <h class="Headings">Topic 17 Notes - Equilibrium (HL)</h>
                         <ol>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-17.pdf"> Download Topic 17 (PDF)</a></li>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-17.note" download> Download Topic 17 (Notability)</a></li>
                         </ol>
-                <h class="Headings">Topic 18: Acids and Bases (HL)</h>
+                <h class="Headings">Topic 18 Notes - Acids and Bases (HL)</h>
                         <ol>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-18.pdf"> Download Topic 18 (PDF)</a></li>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-18.note" download> Download Topic 18 (Notability)</a></li>
                         </ol>
-                <h class="Headings">Topic 19: Redox Processes (HL)</h>
+                <h class="Headings">Topic 19 Notes - Redox Processes (HL)</h>
                         <ol>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-19.pdf"> Download Topic 19 (PDF)</a></li>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-19.note" download> Download Topic 19 (Notability)</a></li>
                         </ol>
-                <h class="Headings">Topic 20: Organic Chemistry (HL)</h>
+                <h class="Headings">Topic 20 Notes - Organic Chemistry (HL)</h>
                         <ol>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-20.pdf"> Download Topic 20 (PDF)</a></li>
                             <li><a class="Download Links" href="Notes (Chemistry)/Chemistry-Topic-20.note" download> Download Topic 20 (Notability)</a></li>
