--- a/physics.html
+++ b/physics.html
@@ -18,7 +18,7 @@
         <h1 id="MainHeading">Physics Notes</h1>
             <body1 class="MainTexts">
                 <center>
-                    <mark>Currently every single PDF link works with the exception of topics 3, 4, and Option B, while most of the Notability links don't work. These will be resolved by the end of this week.</mark>
+                    <mark>Currently every single PDF link works with the exception of topics 3, 4, and Option B including their Notability files. These will be resolved by the end of this week.</mark>
                 </center>
             </body1>
                 <br>
