--- a/math.html
+++ b/math.html
@@ -30,5 +30,7 @@
                     })
                 })
             </script>
+            <h1>Math Notes</h1>
+            <p>Since Mathematics has had it's sylabus re-worked I will be uploading solutions to different books that I will be doing, these will include some IB textbooks, although it's likely that I will be uplading solutions to textsbooks for unitiversity most of the time.</p>
         </section>
     </html>
