--- a/math.html
+++ b/math.html
@@ -32,5 +32,15 @@
             </script>
             <h1>Math Notes</h1>
             <p>Since Mathematics has had it's sylabus re-worked I will be uploading solutions to different books that I will be doing, these will include some IB textbooks, although it's likely that I will be uplading solutions to textsbooks for unitiversity most of the time.</p>
+            
+            <h2>Notes from the Discrete Mathematics with Applications Textbook</h2>
+            <section1 id="Notes Section">
+                <h class="Notes Headings">Chapter 1 Notes - Speaking Mathematically</h3>
+                    <li><a class="Download Links" href="Notes (Math)/Discrete-Mathematics-Chapter-1.pdf"></a>Download Topic 1 (PDF)</li>
+                    <li><a class="Download Links" href="Notes (Math)/Discrete-Mathematics-Chapter-1.note"></a>Download Topic 1 (Notability)</li>
+                <h class="Notes Headings">Chapter 2 Notes - </h>
+                    <li><a class="Download Links" href="Notes (Math)/Discrete-Mathematics-Chapter-2.pdf"></a>Download Topic 2 (PDF)</li>
+                    <li><a class="Download Links" href="Notes (Math)/Discrete-Mathematics-Chapter-2.note"></a>Download Tipic 2 (Notability)</li>
+            </section1>
         </section>
     </html>
