--- a/math.html
+++ b/math.html
@@ -34,13 +34,15 @@
             <p>Since Mathematics has had it's sylabus re-worked I will be uploading solutions to different books that I will be doing, these will include some IB textbooks, although it's likely that I will be uplading solutions to textsbooks for unitiversity most of the time.</p>
             
             <h2>Notes from the Discrete Mathematics with Applications Textbook</h2>
-            <section1 id="Notes Section">
-                <h class="Notes Headings">Chapter 1 Notes - Speaking Mathematically</h3>
-                    <li><a class="Download Links" href="Notes (Math)/Discrete-Mathematics-Chapter-1.pdf"></a>Download Topic 1 (PDF)</li>
-                    <li><a class="Download Links" href="Notes (Math)/Discrete-Mathematics-Chapter-1.note"></a>Download Topic 1 (Notability)</li>
-                <h class="Notes Headings">Chapter 2 Notes - </h>
-                    <li><a class="Download Links" href="Notes (Math)/Discrete-Mathematics-Chapter-2.pdf"></a>Download Topic 2 (PDF)</li>
-                    <li><a class="Download Links" href="Notes (Math)/Discrete-Mathematics-Chapter-2.note"></a>Download Tipic 2 (Notability)</li>
-            </section1>
+                <h class="Headings">Chapter 1 Notes - Speaking Mathematically</h>
+                    <ol>
+                        <li><a class="Download Links" href="#">Download Topic 1 (PDF)</a></li>
+                        <li><a class="Download Links" href="#" Download>Download Topic 1 (Notability)</a></li>
+                      </ol>
+                <h class="Headings">Chapter 2 Notes - </h>
+                    <ol>
+                        <li><a class="Download Links" href="#">Download Topic 2 (PDF)</a></li>
+                        <li><a class="Download Links" href="#" Download>Download Tipic 2 (Notability)</a></li>
+                    </ol>
         </section>
     </html>
