Math Chapt 1 & 2 Unification

--- a/math.html
+++ b/math.html
@@ -34,15 +34,10 @@
             <p>Since Mathematics has had it's sylabus re-worked I will be uploading solutions to different books that I will be doing, these will include some IB textbooks, although it's likely that I will be uplading solutions to textsbooks for unitiversity most of the time.</p>
             
             <h2>Notes from the Discrete Mathematics with Applications Textbook</h2>
-                <h class="Headings">Chapter 1 Notes - Speaking Mathematically</h>
+                <h class="Headings">Chapter 1 Notes - Speaking Mathematically & Chapter 2 Notes - The Logic of Compound Statements</h>
                     <ol>
                         <li><a class="Download Links" href="#">Download Topic 1 (PDF)</a></li>
                         <li><a class="Download Links" href="#" Download>Download Topic 1 (Notability)</a></li>
                       </ol>
-                <h class="Headings">Chapter 2 Notes - </h>
-                    <ol>
-                        <li><a class="Download Links" href="#">Download Topic 2 (PDF)</a></li>
-                        <li><a class="Download Links" href="#" Download>Download Tipic 2 (Notability)</a></li>
-                    </ol>
         </section>
     </html>
