--- a/math.html
+++ b/math.html
@@ -32,12 +32,16 @@
             </script>
             <h1>Math Notes</h1>
             <p>Since Mathematics has had it's sylabus re-worked I will be uploading solutions to different books that I will be doing, these will include some IB textbooks, although it's likely that I will be uplading solutions to textsbooks for unitiversity most of the time.</p>
-            
-            <h2>Notes from the Discrete Mathematics with Applications Textbook:</h2>
+            <br><br>
+            <p>I will also be adding a list of textbooks that I recommend for CS mathematics below to help you study:</p>
+                <ol>
+                    <li>Discrete mathematics with Applications Textbooks</li>
+                </ol>
+            <h2>Notes from the Discrete Mathematics with Applications Textbook</h2>
                 <h class="Headings">Chapter 1 Notes - Speaking Mathematically & Chapter 2 Notes - The Logic of Compound Statements</h>
                     <ol>
                         <li><a class="Download Links" href="#">Download Topic 1 (PDF)</a></li>
                         <li><a class="Download Links" href="#" Download>Download Topic 1 (Notability)</a></li>
-                      </ol>
+                      </ol>    
         </section>
     </html>
