--- a/physics.html
+++ b/physics.html
@@ -32,6 +32,8 @@
         <section2>
             <img src="Memes/square_equals_circle.jpg">
         </section2>
+        
+        <! -- List used to contain all notes -->
         <section1>
                 <h2>Topic 2 Notes - Mechanics</h2>
                     <li><a class="Download Links" href="Notes%20(Physics)/Physics-Topic-2.pdf"> Download Topic 2 (PDF)</a></li>
